--- a/InterestCalculator/Views/Shared/_Layout.cshtml
+++ b/InterestCalculator/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-Area="" asp-controller="" asp-action="Compound">CompoundInterest</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
