Adding some CSS for text location

--- a/InterestCalculator/Views/Home/Index.cshtml
+++ b/InterestCalculator/Views/Home/Index.cshtml
@@ -3,15 +3,15 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Welcome to the simple Interst Calculator</h1>
     <form method="post">
-        <label for="principal">Principal Amount:</label>
+        <label for="principal" class="inputField">Principal Amount:</label>
         <input type="number" id="principal" name="principal" required /><br />
 
-        <label for="Interest">Interest Rate (%):</label>
+        <label for="Interest" class="inputField">Interest Rate (%):</label>
         <input type="number" id="Interest" name="Interest" step="0.01" required /><br />
 
-        <label for="time">Time (Years):</label>
+        <label for="time" class="inputField">Time (Years):</label>
         <input type="number" id="NumberOfInvestmentYears" name="NumberOfInvestmentYears" required /><br />
 
         <button type="submit">Calculate</button>
