--- a/InterestCalculator/Views/Home/CompoundInterest.cshtml
+++ b/InterestCalculator/Views/Home/CompoundInterest.cshtml
@@ -4,19 +4,19 @@
 
 <form asp-action="CompoundInterest" method="post">
     <div>
-        <label asp-for="Principal">Principal:</label>
+        <label asp-for="Principal" class="inputField">Principal:</label>
         <input asp-for="Principal" type="number" />
     </div>
     <div>
-        <label asp-for="Interest">Annual Interest Rate (%):</label>
+        <label asp-for="Interest" class="inputField">Annual Interest Rate (%):</label>
         <input asp-for="Interest" type="number" step="0.01" />
     </div>
     <div>
-        <label asp-for="NumberOfInvestmentYears">Time (Years):</label>
+        <label asp-for="NumberOfInvestmentYears" class="inputField">Time (Years):</label>
         <input asp-for="NumberOfInvestmentYears" type="number" />
     </div>
     <div>
-        <label asp-for="AmountAddedEachYear">AmountAddedEachYear</label>
+        <label asp-for="AmountAddedEachYear" class="inputField">AmountAddedEachYear</label>
         <input asp-for="AmountAddedEachYear" type="number" />
     </div>
     <button type="submit">Calculate</button>
@@ -24,7 +24,7 @@
 
 @if (Model.InterestGain != 0)
 {
-    <p>
+    <p class="inputField">
         Compound Interest: $@Model.InterestGain
     </p>
 }
