--- a/InterestCalculator/wwwroot/css/site.css
+++ b/InterestCalculator/wwwroot/css/site.css
@@ -18,5 +18,12 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #E0FFFF;
+}
+
+
+.inputField {
+    width: 180px;
+    height: 30px;
 }
