--- a/InterestCalculator/Views/Home/Index.cshtml
+++ b/InterestCalculator/Views/Home/Index.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to the simple Interst Calculator</h1>
+<div>
+    <h1 class="center" class="display-4">Welcome to the simple Interst Calculator</h1>
     <form method="post">
         <label for="principal" class="inputField">Principal Amount:</label>
         <input type="number" id="principal" name="principal" required /><br />
