--- a/InterestCalculator/Views/Home/Index.cshtml
+++ b/InterestCalculator/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div>
-    <h1 class="center" class="display-4">Welcome to the simple Interst Calculator</h1>
+    <h2 class="center display-4" class="display-4">Welcome to the simple Interst Calculator</h2>
     <form method="post">
         <label for="principal" class="inputField">Principal Amount:</label>
         <input type="number" id="principal" name="principal" required /><br />
