Made it so that the calculators display the total value, not just the interest gained.

--- a/InterestCalculator/Views/Home/CompoundInterest.cshtml
+++ b/InterestCalculator/Views/Home/CompoundInterest.cshtml
@@ -25,6 +25,7 @@
 @if (Model.InterestGain != 0)
 {
     <p class="inputField">
-        Compound Interest: $@Model.InterestGain
+        Interest Gained: $@Model.InterestGain
+        Total Value at Maturity: $@Model.currentAmount
     </p>
 }
