--- a/InterestCalculator/Views/Home/SimpleInterest.cshtml
+++ b/InterestCalculator/Views/Home/SimpleInterest.cshtml
@@ -23,6 +23,6 @@
 {
     <p class="inputField">
         Simple Interest: $@Model.InterestGain
-        Total Value of Investment: $@Model.
+        Total Value at Maturity: $@Model.FinalValue
     </p>
 }
