--- a/InterestCalculator/Views/Home/Index.cshtml
+++ b/InterestCalculator/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div>
     <h2 class="center display-4">Welcome to my Calculator website!</h2>
-    <h3 class="center display-4">Please Select the calculator you would like to use from the Navigation Bar.</h3>
+    <h4 class="center ">Please Select the calculator you would like to use from the Navigation Bar.</h4>
 
 
 </div>
