--- a/InterestCalculator/Views/Shared/_Layout.cshtml
+++ b/InterestCalculator/Views/Shared/_Layout.cshtml
@@ -34,8 +34,18 @@
                                 <li><a class="dropdown-item" asp-area="" asp-controller="" asp-action="CompoundInterest">Compound Interest</a></li>
                                 <!-- Add more calculator links here -->
                             </ul>
-
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdownProjects" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Other Projects
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" asp-area="" asp-controller="" asp-action="Project 1">Project 1</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="" asp-action="Project 2">Project 2</a></li>
+
+                            </ul>
+                        </li>
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
