--- a/InterestCalculator/Views/Project/Project1.cshtml
+++ b/InterestCalculator/Views/Project/Project1.cshtml
@@ -1,1 +1,1 @@
-﻿<h2 class="center display-4">This is a page aboue the game I made which is pased off of pokemon.</h2>
+﻿<h2 class="center display-4">This is a page aboue the game I made which is based off of pokemon.</h2>
