--- a/InterestCalculator/Views/Project/Project2.cshtml
+++ b/InterestCalculator/Views/Project/Project2.cshtml
@@ -1,3 +1,3 @@
-﻿<h2 class="center display-4>">This is a the Console Game that I made. </h2>
+﻿<h2 class="center display-4>">This is a Console Game that I made. </h2>
 
 <a href="https://kouliesgames.itch.io/consoleroguelite">Link to Game on Itch.io</a>
