--- a/InterestCalculator/Views/Home/About.cshtml
+++ b/InterestCalculator/Views/Home/About.cshtml
@@ -3,4 +3,5 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>This page contains information about the calculators available on this site.</p>
+<p>This page contains information about the calculators available on this site and a bit about myself, the creator of the site.</p>
+<img src="~Images/PicOfMe.jpg" alt="Image of the creator" />
