--- a/InterestCalculator/Views/Home/About.cshtml
+++ b/InterestCalculator/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>This page contains information about the calculators available on this site and a bit about myself, the creator of the site.</p>
-<img src="~Images/PicOfMe.jpg" alt="Image of the creator" />
+<img src="~/Images/NewPicOfMe.png" alt="Image of the creator" style="height: 50%; width: 50%" />
