Update Project1.cshtml, changed to bikepacking site.

--- a/InterestCalculator/Views/Project/Project1.cshtml
+++ b/InterestCalculator/Views/Project/Project1.cshtml
@@ -1,1 +1,2 @@
-﻿<h2 class="center display-4">This is a page aboue the game I made which is based off of pokemon.</h2>
+<H2>GTA Bikepacking Site</H2>
+<div>This is a resource that I created for local bikepacking routes.</div>
