Changed project 1 to be the bikepacking site

--- a/InterestCalculator/Views/Project/BikepackingSite.cshtml
+++ b/InterestCalculator/Views/Project/BikepackingSite.cshtml
@@ -1,2 +1,3 @@
 <H2>GTA Bikepacking Site</H2>
 <div>This is a resource that I created for local bikepacking routes.</div>
+<a href="http://bikepackingnonclient.azurewebsites.net">Link to the site</a>
