--- a/InterestCalculator/Views/Shared/_Layout.cshtml
+++ b/InterestCalculator/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                 Other Projects
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Project" asp-action="Project1">Project 1</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Project" asp-action="BikepackingSite">Bikepacking Website</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Project" asp-action="Project2">Project 2</a></li>
 
                             </ul>
