Updated dropdown bar.

--- a/InterestCalculator/Views/Shared/_Layout.cshtml
+++ b/InterestCalculator/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Project" asp-action="BikepackingSite">Bikepacking Website</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Project" asp-action="Project2">Project 2</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Project" asp-action="Project2">Console Game</a></li>
 
                             </ul>
                         </li>
