Removed the login and register sections from the site.

--- a/InterestCalculator/Views/Shared/_Layout.cshtml
+++ b/InterestCalculator/Views/Shared/_Layout.cshtml
@@ -48,8 +48,8 @@
                         </li>
 
                     </ul>
-                    <partial name="_LoginPartial" />
-                </div>
+@*                     <partial name="_LoginPartial" />
+ *@                </div>
             </div>
         </nav>
     </header>
